--- a/app/src/main/res/layout/activity_add_wallet_entry.xml
+++ b/app/src/main/res/layout/activity_add_wallet_entry.xml
@@ -35,8 +35,7 @@
             android:id="@+id/root_layout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/backgroundPrimary"
-            >
+            android:background="@color/backgroundPrimary">
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
