--- a/app/src/main/res/layout/activity_edit_custom_category.xml
+++ b/app/src/main/res/layout/activity_edit_custom_category.xml
@@ -54,13 +54,13 @@
         android:theme="@style/ToolbarTheme"
         app:layout_scrollFlags="scroll|enterAlways|snap"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="@color/textColorPrimary" />
+        app:titleTextColor="@color/textColorPrimary"
+        tools:ignore="MissingConstraints" />
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_entry_button"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.0">
 
@@ -136,8 +136,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/select_name_edittext"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                     />
+                    android:layout_height="wrap_content" />
 
             </android.support.design.widget.TextInputLayout>
 
