--- a/app/src/main/res/layout/activity_edit_wallet_entry.xml
+++ b/app/src/main/res/layout/activity_edit_wallet_entry.xml
@@ -47,7 +47,8 @@
                 android:theme="@style/ToolbarTheme"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:titleTextColor="@color/textColorPrimary" />
+                app:titleTextColor="@color/textColorPrimary"
+                tools:ignore="MissingConstraints" />
 
             <ScrollView
                 android:id="@+id/scrollView2"
