--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="errorColor">#F00900</color>
-    <color name="colorPrimary">#0000CD</color>
-    <color name="colorPrimaryDark">#0000CD</color>
+    <color name="colorPrimary">#0099CC</color>
+    <color name="colorPrimaryDark">#0099CC</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#4169E1</color>
+    <color name="colorAccent">#0509FF</color>
     <color name="backgroundPrimary">#FFFFFF</color>
     <color name="backgroundBlack">#212121</color>
     <color name="primary_text_material_light">#de000000</color>
     <color name="divider_color">#9e9e9e</color>
     <color name="primary_text_expense">#F00900</color>
-    <color name="primary_text_income">#1BF001</color>
-    <color name="gauge_gray">#ababab</color>
-    <color name="gauge_income">#1BF001</color>
+    <color name="primary_text_income">#009F75</color>
+    <color name="gauge_gray">#808080</color>
+    <color name="gauge_income">#009F75</color>
     <color name="gauge_expense">#F00900</color>
     <color name="gauge_white">#FFFFFF</color>
 
