--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,10 @@
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#0509FF</color>
+    <color name="colorAccent">#0104F5</color>
     <color name="backgroundPrimary">#FFFFFF</color>
     <color name="backgroundBlack">#212121</color>
-    <color name="primary_text_material_light">#de000000</color>
+    <color name="primary_text_material_light">#000000</color>
     <color name="divider_color">#9e9e9e</color>
     <color name="primary_text_expense">#F00900</color>
     <color name="primary_text_income">#009F75</color>
